# EndlessRPG

./: build.gradle.kts  build_all.sh  gradle.properties  settings.gradle.kts
.github/workflows/: android_build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: character.frag  character.vert  grass.comp  grass.frag  grass.vert  terrain.frag  terrain.vert
app/src/main/cpp/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  Character.cpp  Character.h  EGLCore.cpp  EGLCore.h  Engine.cpp  NativeEngine.cpp  RenderLoop.cpp  RenderLoop.h  Renderer.cpp  Renderer.h
app/src/main/java/com/example/game/: GameSurfaceView.kt  JoystickOverlayView.kt  MainActivity.kt
runtime/: build_models.py  generate_assets.sh  generate_engine.sh  generate_game.sh  generate_models.sh  generate_shaders.sh  infill_game.sh
runtime/models/: __init__.py  character.py  tree.py
runtime/models/equipment/: __init__.py  shield.py  sword.py
runtime/python/: generate_realistic_assets.py
scripts/: setup_project.sh
